--- a/style.less
+++ b/style.less
@@ -70,6 +70,23 @@ body{
   }
 }
 
+.bloqa div{
+	margin-top: 15px;
+	margin-bottom: 15px;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	color:white;
+	text-align: center;
+	h1{
+		font-size: 16px;
+		color:white;
+		font-weight: 700;
+	}
+	p{
+		font-size: 14px;
+		color:white;
+	}
+}
 .seccion-dos{
 	color:#4e5974;
 }
