--- a/style.less
+++ b/style.less
@@ -23,7 +23,15 @@ body{
 .seccion-uno{
 	background: url("asset/group-19.png");
 	background-size: cover;
-	background-position: top;
+	background-position: bottom;
+	background-color: #fff;
+	background-repeat: no-repeat;
+}
+.citas-bg{
+	background-image: url(asset/group-50.png), url("asset/combined-shape.png");
+	background-size:contain, cover;
+	background-position: center bottom, bottom;
+	background-repeat: no-repeat, no-repeat;
 }
 .sec1-cont{
 	color:white;
@@ -199,6 +207,38 @@ body{
   		font-weight: 700;
   		border: none;
   		margin-bottom: 70px;
+	}
+	.left{
+		-webkit-border-radius: 100px 0 0 100px;
+		border-radius: 100px 0 0 100px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		padding-left: 30px;
+	}
+	.center{
+		border-radius: 0px ;
+		-webkit-border-radius:0px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
+	.right{
+		-webkit-border-radius: 0px 100px 100px 0px;
+		border-radius: 0px 100px 100px 0px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		margin-top: 15px;
+		margin-bottom: 0px;
+	}
+	.triangulo-equilatero-bottom {
+		 width: 0;
+		 height: 0;
+		 border-right: 15px solid transparent;
+		 border-top: 15px solid transparent;
+		 border-left: 15px solid transparent;
+		 border-bottom: 15px solid #fff;
+		  position: absolute;
+   		 top: 60px;
+		left: 60px;
 	}
 }
 
